--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -1,3 +1,4 @@
+{% strip %}
 <div class="footer">
   <div class="container-fluid">
     <p class="muted pull-right">
@@ -8,3 +9,4 @@
     <p class="muted">&copy; 2002-2013 - Александр Егоров</p>
   </div>
 </div>
+{% endstrip %}
