--- a/templates/bit/script.html
+++ b/templates/bit/script.html
@@ -1,3 +1,4 @@
+{% strip %}
 # for module in config.SCRIPTS_MODULES
   # if config.DEVELOPMENT
     # for script in config.SCRIPTS[module]
@@ -10,3 +11,4 @@
     # endif
   # endif
 # endfor
+{% endstrip %}
