--- a/apps/portfolio/templates/portfolio/apache_documents_list.html
+++ b/apps/portfolio/templates/portfolio/apache_documents_list.html
@@ -1,3 +1,4 @@
+{% strip %}
 {% if apache_docs %}
 <dl>
     {% for item in apache_docs %}
@@ -6,3 +7,4 @@
     {% endfor %}
 </dl>
 {% endif %}
+{% endstrip %}
