--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>
       # block title
         # if title
-          {{title}} |
+          {{title}}&nbsp;|&nbsp;
         # endif
       # endblock
       {{config.CONFIG_DB.brand_name}}
@@ -33,7 +33,7 @@
                     {% block breadcrumbs %}
                     {% for item in breadcrumbs %}
                         <li>
-                            <a href="{{ url_for(item[0]) }}">{% if item[2] %}<i class="{{ item[2] }}"></i>{% endif %} {{ item[1] }}</a>
+                            <a href="{{ url_for(item[0]) }}">{% if item[2] %}<i class="{{ item[2] }}"></i>&nbsp;{% endif %}{{ item[1] }}</a>
                             <span class="divider"> &rarr; </span>
                         </li>
                     {% endfor %}
