--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -99,23 +99,7 @@
                 {% endif %}
             </div>
             <h3>Архив</h3>
-            {% if not archieve %}
-                <p>Ничего нет</p>
-            {% else %}
-                <div id="accordion">
-                    {% for year in archieve | sort(reverse=True) %}
-                        <h3>{{ year }}</h3>
-                        <div>
-                            <ul class="nav nav-list">
-                                {% for month in archieve[year] %}
-                                    <li><a href="#year={{ year }}&month={{ month[0] }}"
-                                            >{{ months[month[0]] }} ({{ month[1] }})</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
+            {% include 'news/archive.html' %}
         </div>
     </div>
 {% endblock %}
