view in json removed from footer

--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <p class="muted pull-right">
       # if current_user.admin
-        | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">Смотреть в JSON</a>
+        # TODO: Add something
       # endif
     </p>
     <p class="muted">&copy; 2002-2013 - Александр Егоров</p>
