refactoring: code duplication elimintated

--- a/templates/bit/style.html
+++ b/templates/bit/style.html
@@ -1,7 +1,10 @@
+{% strip %}
 # for style in config.STYLES
   # if config.DEVELOPMENT
-    <link rel="stylesheet" type="text/css" href="/p/{{style.replace('.less', '.css').replace('src/less', 'dst/css')}}?{{config.CURRENT_VERSION_ID}}">
+    {% set link = style.replace('.less', '.css').replace('src/less', 'dst/css') %}
   # else
-    <link rel="stylesheet" type="text/css" href="/p/{{style.replace('.less', '.min.css').replace('src/less', 'min/css')}}?{{config.CURRENT_VERSION_ID}}">
+    {% set link = style.replace('.less', '.min.css').replace('src/less', 'min/css') %}
   # endif
+    <link rel="stylesheet" type="text/css" href="/p/{{ link }}?{{config.CURRENT_VERSION_ID}}">
 # endfor
+{% endstrip %}
