--- a/apps/news/templates/news/tags.html
+++ b/apps/news/templates/news/tags.html
@@ -1,14 +1,20 @@
+{% strip %}
 <div class="tags">
     {% if not tags %}
         <p>Ничего нет</p>
     {% else %}
+        <ul class="inline">
         {% for tag in tags %}
+            <li>
             {% if tag.title == tag_selected %}
                 <span class={{ tag.tag_level }}>{{ tag.title }}</span>
             {% else %}
                 <a href="{{ url_for('news.index') }}?tag={{ tag.title }}"
                    class={{ tag.tag_level }}>{{ tag.title }}</a>
             {% endif %}
+            </li>
         {% endfor %}
+        </ul>
     {% endif %}
 </div>
+{% endstrip %}
