reorganization to improve maintainability

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
       # endblock
       {{config.CONFIG_DB.brand_name}}
     </title>
-    <link href="{{ url_for('recent_feed') }}"
+    <link href="{{ url_for('news.recent_feed') }}"
       rel="alternate"
       title="Recent Posts"
       type="application/atom+xml">
