api index page 500 error fix

--- a/apps/api/v2/templates/api/v2/index.html
+++ b/apps/api/v2/templates/api/v2/index.html
@@ -2,7 +2,7 @@
 
 {% block breadcrumbs %}
     <li>
-        <a href="{{ url_for('welcome.index') }}">Главная</a>
+        <a href="{{ url_for('welcome') }}">Главная</a>
         <span class="divider"> &rarr; </span>
     </li>
     <li class="active">
