--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,6 +6,14 @@
 # endblock
 
 # block content
+<div class="hero-unit">
+    <h1>{{ posts[rnd].title }}</h1>
+
+    <p>{{ posts[rnd].short_text | safe }}<p>
+        <a href="{{ url_for('news.post', key_id=posts[rnd].key.id()) }}" class="btn btn-primary btn-large">Читать далее ...</a>
+    </p>
+</div>
+
 <!-- Example row of columns -->
 <div class="row-fluid">
     <div class="span6">
