--- a/apps/api/v2/templates/api/v2/index.html
+++ b/apps/api/v2/templates/api/v2/index.html
@@ -126,7 +126,7 @@
             <dl class="dl-horizontal">
                 <dt>URL</dt>
                 <dd>
-                    <a href="{{ url_for('api.v2.post_json') }}">
+                    <a href="{{ url_for('api.v2.random_post_json') }}">
                         http://{{ request.host }}/{{ url_for('api.v2.random_post_json') }}
                     </a>
                 </dd>
