--- a/templates/bit/script.html
+++ b/templates/bit/script.html
@@ -1,5 +1,7 @@
 {% strip %}
 # for module in config.SCRIPTS_MODULES
+    {% if request.path != '/' and module == 'home' %}
+    {% else %}
   # if config.DEVELOPMENT
     # for script in config.SCRIPTS[module]
       <script src="/p/{{script.replace('.coffee', '.js').replace('src/coffee', 'dst/js')}}?{{config.CURRENT_VERSION_ID}}"></script>
@@ -10,5 +12,6 @@
         <script src="/p/min/js/{{module}}.min.js?{{config.CURRENT_VERSION_ID}}"></script>
     # endif
   # endif
+    {% endif %}
 # endfor
 {% endstrip %}
