random posts only from last 5

--- a/apps/api/v2/templates/api/v2/index.html
+++ b/apps/api/v2/templates/api/v2/index.html
@@ -122,7 +122,7 @@
                 </dd>
             </dl>
 
-            Получение произвольного поста из базы (каждый раз разный)
+            Получение одного произвольного поста из последних пяти (каждый раз разный)
             <dl class="dl-horizontal">
                 <dt>URL</dt>
                 <dd>
