--- a/templates/bit/footer.html
+++ b/templates/bit/footer.html
@@ -1,9 +1,11 @@
 {% strip %}
-<div class="footer">
-  <div class="container-fluid">
-    <p class="muted pull-right">
-    </p>
-    <p class="muted">&copy; 2002-2013 - Александр Егоров</p>
-  </div>
-</div>
+    <div class="footer">
+        <div class="container-fluid">
+            <p class="muted pull-right">
+                <img src="https://developers.google.com/appengine/images/appengine-noborder-120x30.gif"
+                     alt="Powered by Google App Engine"/></p>
+
+            <p class="muted">&copy; 2002-2013 - Александр Егоров</p>
+        </div>
+    </div>
 {% endstrip %}
