localizaiton: update profile button text fixed

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,7 +29,7 @@
           # include 'bit/form_text_field.html'
 
           <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Обновление профиля...">
-            Update Profile
+            Обновить профиль
           </button>
         </fieldset>
       </form>
