Updated sign in buttons to use font icons instead of SVG images

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="span4 offset4">
       <a class="btn btn-block btn-large btn-google" href="{{google_signin_url}}">
-        <img src="/p/img/signin/google.svg" alt="Google Logo">
+        <i class="icon icon-google-plus"></i>
         Войти с учетной записью Google
       </a>
 
