Updated sign in buttons to use font icons instead of SVG images (finish)

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -18,14 +18,14 @@
 
       # if config.CONFIG_DB.facebook_app_id and config.CONFIG_DB.facebook_app_secret
         <a class="btn btn-block btn-large btn-facebook" href="{{facebook_signin_url}}">
-          <img src="/p/img/signin/facebook.svg" alt="Facebook Logo">
+          <i class="icon icon-facebook"></i>
           Войти с учетной записью Facebook
         </a>
       # endif
 
       # if config.CONFIG_DB.twitter_consumer_key and config.CONFIG_DB.twitter_consumer_secret
         <a class="btn btn-block btn-large btn-twitter" href="{{twitter_signin_url}}">
-          <img src="/p/img/signin/twitter.svg" alt="Twitter Logo">
+          <i class="icon icon-twitter"></i>
           Войти с учетной записью Twitter
         </a>
       # endif
