--- a/templates/bit/top_bar.html
+++ b/templates/bit/top_bar.html
@@ -20,6 +20,7 @@
                             </a>
                         </li>
                     {% endfor %}
+                    # include 'bit/contact_menu.html'
                 </ul>
                 <ul class="nav pull-right">
                     # include 'bit/user_menu.html'
