search adde to the site

--- a/apps/news/templates/news/index.html
+++ b/apps/news/templates/news/index.html
@@ -18,6 +18,7 @@
 
 {% block content %}
     {% strip %}
+    # include 'bit/search.html'
     <div class="row-fluid">
         <div class="span9">
             {% if not posts %}
