--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -15,7 +15,8 @@
     </p>
 </div>
 
-<!-- Example row of columns -->
+# include 'bit/search.html'
+
 <div class="row-fluid">
     <div class="span6">
         <h2><a href="{{ url_for('news.index') }}">Блог</a></h2>
