adsense on post page

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -60,6 +60,9 @@ renderPlusone();
                 {% include 'bit/more_posts.html' %}
                 <p/>
             </div>
+            {% include 'bit/small_banner.html' %}
+            {% include 'bit/small_banner.html' %}
+            {% include 'bit/small_banner.html' %}
         </div>
     </div>
 {% endblock %}
