twitter bootstrap conflict fix with search box styles

--- a/templates/bit/search.html
+++ b/templates/bit/search.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span12">
-            <gcse:searchbox-only></gcse:searchbox-only>
+            <div class="gcse-searchbox-only" data-resultsUrl="http://www.egoroff.spb.ru/search/" data-queryParameterName="q">
+            </div>
         </div>
     </div>
 </div>
