--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,10 @@
 # extends 'base.html'
 
 # block content
-# include 'bit/search.html'
   <div class="row">
     <div class="span12">
-        <gcse:searchresults-only></gcse:searchresults-only>
+        <div class="gcse-search" data-resultsUrl="http://www.egoroff.spb.ru/search/" data-queryParameterName="q">
+        </div>
     </div>
   </div>
 # endblock
