--- a/static/src/less/apache.less
+++ b/static/src/less/apache.less
@@ -99,3 +99,26 @@ table {
     margin-right: 1em;
   }
 }
+
+/*
+ * 02.05.2013
+ * Fix Conflict with Google Custom User Search and Bootstrap Styles
+ */
+ #gs_tti0 > input {margin-top:-1px !important;}
+ .box {
+     background: #ffffff;
+     border: 2px solid #D9D9D9;
+     border-radius: 15px;
+     -moz-border-radius: 15px;
+     -webkit-border-radius: 15px;
+     margin-top: 10px;
+     -moz-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+     box-sizing: border-box;
+ }
+
+ .gsc-input-box input[type="text"], .gsc-input-box input[type="text"]:focus, .gsc-input-box input[type="text"]:active {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+ }
