--- a/templates/base.html
+++ b/templates/base.html
@@ -20,15 +20,20 @@
     # include 'bit/style.html'
     # block head
     # endblock
+# block searchscript
 <script>
   (function() {
-    var cx = '006596644808879549558:WMX-188601290';
-    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+    var cx = '006596644808879549558:dwgc4vapbog';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
     gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
         '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
   })();
 </script>
+# endblock
     # include 'bit/analytics.html'
   </head>
 
