noindex for last blog posts

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -48,6 +48,7 @@ renderPlusone();
             {% include 'bit/disqus.html' %}
         </div>
         <div class="span3">
+            <!--noindex-->
             <h4>
                 Из последнего
             </h4>
@@ -60,6 +61,7 @@ renderPlusone();
                 {% include 'bit/more_posts.html' %}
                 <p/>
             </div>
+            <!--/noindex-->
         </div>
     </div>
 {% endblock %}
