search script only on related pages

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,9 @@
 # extends 'base.html'
 
+# block searchscript
+# include 'bit/searchscript.html'
+# endblock
+
 # block content
   <div class="row">
     <div class="span12">
