--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,10 @@
     <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
 # endblock
 
+# block searchscript
+# include 'bit/searchscript.html'
+# endblock
+
 # block content
 {% strip %}
 <div class="hero-unit">
