resultsUrl made relative

--- a/templates/bit/search.html
+++ b/templates/bit/search.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span12">
-            <div class="gcse-searchbox-only" data-resultsUrl="http://www.egoroff.spb.ru/search/" data-queryParameterName="q">
+            <div class="gcse-searchbox-only" data-resultsUrl="/search/" data-queryParameterName="q">
             </div>
         </div>
     </div>
