--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
 # block content
   <div class="row">
     <div class="span12">
-        <div class="gcse-search" data-resultsUrl="http://www.egoroff.spb.ru/search/" data-queryParameterName="q">
+        <div class="gcse-search" data-resultsUrl="/search/" data-queryParameterName="q">
         </div>
     </div>
   </div>
