JSON API page html optimized

--- a/apps/api/v2/templates/api/v2/index.html
+++ b/apps/api/v2/templates/api/v2/index.html
@@ -20,6 +20,7 @@
 {% endblock %}
 
 {% block content %}
+{% strip %}
 <div class="row">
     <div class="span12">
         <h1 class="page-header">
@@ -139,4 +140,5 @@
         </section>
     </div>
 </div>
+{% endstrip %}
 {% endblock %}
