--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -1,21 +1,12 @@
 # if not current_user.admin and config.CONFIG_DB.analytics_id
-  <script>
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '{{config.CONFIG_DB.analytics_id}}']);
-    _gaq.push(['_trackPageview']);
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-    <script type="text/javascript">
-      var _gaq = window._gaq || [];
-      window.onerror = function(msg, url, line) {
-        var preventErrorAlert = true;
-        _gaq.push(['_trackEvent', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line]);
-        return preventErrorAlert;
-    };
+      ga('create', '{{config.CONFIG_DB.analytics_id}}', 'egoroff.spb.ru');
+      ga('send', 'pageview');
+
     </script>
 # endif
