--- a/templates/bit/analytics.html
+++ b/templates/bit/analytics.html
@@ -6,6 +6,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', '{{config.CONFIG_DB.analytics_id}}', 'egoroff.spb.ru');
+      ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
 
     </script>
